...
    ChatTheme.TextField(
        label = stringResource(string.email),
        minimizedLabelBackground = Color.Unspecified,
        value = emailText,
        modifier = Modifier
            .fillMaxWidth()
            .testTag("text_email"),
        keyboardOptions = KeyboardOptions(
            keyboardType = KeyboardType.Email,
        ),
        placeholder = stringResource(string.email_placeholder),
        validate = validator,
    )

    OutlinedTextField(
        state = confirmEmailText,
        modifier = Modifier
            .fillMaxWidth(1f)
            .padding(top = space.large)
            .testTag("text_confirm_email")
            .onFocusChanged { confirmEmailFocused.value = it.isFocused },
        label = {
            Text(
                text = stringResource(string.confirm_email),
                modifier =
                    Modifier
...
